--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+python-json-logger = ">=2.0.7"
 flask = ">=3.0.0"
 requests = ">=2.31.0"
 openai = ">=1.1.1"
