--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ openai==1.1.1
 pydantic==2.4.2 ; python_version >= '3.7'
 pydantic-core==2.10.1 ; python_version >= '3.7'
 python-dotenv==1.0.0
+python-json-logger==2.0.7
 requests==2.31.0
 sniffio==1.3.0 ; python_version >= '3.7'
 tqdm==4.66.1 ; python_version >= '3.7'
